# Generic-JSON-Manager

./: README.md  generic_json_manager.py  pyproject.toml
generic_json_manager/: json_util.py
